# spotpl

./: .gitignore  CMakeLists.txt  Dependencies.cmake  InstallDeps.cmake  LICENSE.txt  README.md
.github/workflows/: publish.yml  test.yml
cmake/modules/: Findutf8cpp.cmake  Findutf8proc.cmake  GetVersionFromGit.cmake  Packaging.cmake  PostPackage.cmake  PrePackage.cmake  Sanitizers.cmake
deployment/: CPackConfig.in.cmake  PackageReadme.rtf  Welcome.rtf  codesign.sh  notarize.sh
src/cli/: main.cpp
src/lib/: api.cpp  api.h  cli.cpp  cli.h  credentials.cpp.in  errors.cpp  errors.h  finder.cpp  finder.h  playlist.cpp  playlist.h  request.cpp  request.h  utility.cpp  utility.h
tests/: finder_test.cpp  tests_main.cpp
